# autopsy-guard

./: .env.example  .gitignore  README.md  config.development.example.yml  config.development.yml  config.production.example.yml  config.production.yml  config.yml  demo_simulator.py  pyproject.toml
docs/: setup-wizard-guide.md
scripts/: setup-autopsyguard.ps1  setup-autopsyguard.sh
simulations/: sim_jvm_crash.py  sim_oom.py  sim_process_kill.py
simulations/simulations/: run_monitor.py  sim_jvm_crash.py  sim_log_errors.py  sim_solr_crash.py
src/autopsyguard/: __init__.py  __main__.py  config.py  detector.py  logger.py  main.py  models.py  monitor.py  notifier.py  oauth_setup.py  platform_utils.py  telegram_notifier.py  whatsapp_notifier.py
src/autopsyguard/detectors/: base.py  hang_detector.py  jvm_crash_detector.py  log_detector.py  process_detector.py  resource_detector.py  solr_detector.py
src/autopsyguard/notifiers/: __init__.py  base.py  telegram.py  whatsapp.py
src/autopsyguard/platform_utils/: __init__.py  paths.py  process.py  validation.py
src/autopsyguard/tests/: test_config.py  test_hang_detector.py  (+10 more)
tests/: conftest.py  test_case_metadata.py  test_case_telemetry.py  test_config.py  test_hang_detector.py  test_i18n.py  test_log_detector.py  test_logger.py  test_metrics_chart_i18n.py  test_metrics_io.py  test_monitor_correlation.py  test_monitor_state.py  test_notifier_email.py  test_platform_utils.py  test_process_detector.py  test_resource_detector.py  test_setup_wizards.py  test_smtp_oauth.py  test_solr_circuit_breaker.py  test_solr_detector.py  test_telegram_notifier.py  test_whatsapp_notifier.py
(+16 files in other folders)
