[project]
name = "autopsyguard"
version = "0.1.0"
description = "Real-time monitoring system for Autopsy digital forensics tool"
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.2.2",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["src/autopsyguard/tests"]
